[package]
name = "exREcise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.26.0"
tokio = "1.25.0"
eyre = "0.6.8"
log = "0.4.17"
tui-logger = { git = "https://github.com/gin66/tui-logger", rev = "3a3568e2464dddc2205e071234135998342d7f1d" }



[dependencies.compiler-explorer-wrapper]
path = "../compiler-explorer-wrapper"
